Fixed scrollbars bnug again

--- a/frontend/components/Container/Container.module.scss
+++ b/frontend/components/Container/Container.module.scss
@@ -14,19 +14,17 @@
   border: 1px solid rgba(0, 0, 0, 0.05);
   font-size: 1em;
   width: 24vw;
-  overflow: hidden;
 
   ul {
     display: grid;
     gap: 0.5vw;
     grid-template-columns: repeat(var(--columns, 1), 1fr);
-    align-content: space-between; /* Starts aligning the content from the beginning of the container */
-    list-style: none;
-    padding-top: 7px;
-    padding-bottom: 5px;
-    padding-left: 6px;
-    padding-right: 5px;
-    max-width: 100%;
+    align-content: start; /* Starts aligning the content from the beginning of the container */
+    padding-top: 0.8vh;
+    padding-left: 0.4vw;
+    padding-right: 0.4vw;
+    width: 100%;
+    height: 100%; // IMPORTANT. This prevents the unnecessary scrollbars
     overflow-x: auto;
   }
 
@@ -76,6 +74,13 @@
     border-color: transparent;
     box-shadow: 0 0 0 2px rgba(255, 255, 255, 0), 0 0px 0px 2px #4c9ffe;
   }
+}
+
+.CenteringWrapper {
+  display: flex !important;
+  justify-content: center !important; /* Center horizontally */
+  width: 100%; /* Take the full width of the container */
+  height: 100%; /* Take the full height of the container */
 }
 
 .Header {
